--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,11 @@
 .App {
   text-align: center;
 }
-
+ul,
+li {
+  list-style: none;
+  text-decoration: none;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
